fix(navigation): truncate long link texts

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -1,4 +1,5 @@
 @import '../../style/reset.scss';
+@import '../../style/mixins.scss';
 @import '../../style/variables.scss';
 @import '../../style/functions.scss';
 
@@ -175,7 +176,7 @@ header {
 }
 
 .link-text {
-    @include truncate-text();
+    @include truncate-text;
     width: 100%;
     padding-left: pxToRem(8);
 }
